# flights

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  PRODUCT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-web.yml
examples/: cheap_nonstop_from_den.py  explore_dataset.py
frontier_flights/: __init__.py  cli.py  client.py  crawl.py
infra/: main.bicep  main.bicepparam
src/flights/: __init__.py  cli.py
src/flights/core/: __init__.py  crawl.py  errors.py  models.py  provider.py  registry.py  storage.py
src/flights/providers/: __init__.py
src/flights/providers/example/: __init__.py  client.py
src/flights/providers/frontier/: __init__.py  client.py
tests/: _frontier.py  conftest.py  test_cli.py  test_crawler.py  test_example_provider.py  test_export.py  test_models.py  test_provider.py  test_schema_contract.py  test_smoke.py  test_storage.py
web/: .prettierignore  build_data.py  eslint.config.js  package-lock.json  package.json  vitest.config.js
web/public/: app.js  data.json  fares.js  format.js  index.html  staticwebapp.config.json  styles.css  tokens.css  trips.js
web/test/: fares.test.js  format.test.js  trips.test.js
