[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "frontier-flights"
version = "0.1.0"
description = "Unofficial pure-HTTP SDK + CLI for Frontier Airlines flight availability (prices and miles)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["requests>=2.28"]

[project.scripts]
frontier-flights = "frontier_flights.cli:main"

[tool.setuptools]
packages = ["frontier_flights"]
