[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flights"
version = "0.2.0"
description = "Unofficial pure-HTTP, multi-provider SDK + CLI for airline flight availability (cash fares and miles)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Eric Hansen" }]
dependencies = ["requests>=2.28"]

[project.scripts]
flights = "flights.cli:main"

[project.urls]
Homepage = "https://github.com/ericchansen/flights"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
