[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flights"
version = "0.2.0"
description = "Unofficial pure-HTTP, multi-provider SDK + CLI for airline flight availability (cash fares and miles)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Eric Hansen" }]
dependencies = ["requests>=2.28"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "black>=24",
    "ruff>=0.6",
    "mypy>=1.11",
    "responses>=0.25",
    "types-requests",
]

[project.scripts]
flights = "flights.cli:main"

[project.urls]
Homepage = "https://github.com/ericchansen/flights"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Black owns formatting; Ruff is the linter only (its formatter stays disabled).
extend-exclude = ["web/public/vendor"]

[tool.ruff.lint]
# UP (pyupgrade) and SIM are enabled later in the Python 3.12 modernization sweep.
select = ["E", "F", "I", "B"]

[tool.ruff.lint.isort]
known-first-party = ["flights"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
